--- a/lab02/biniaris-bio.html
+++ b/lab02/biniaris-bio.html
@@ -17,6 +17,11 @@
         </p>
         <h2>Personal Information</h2>
         <p>When i am not being a great student you can find me working our, playing basketball and playing video games.
+            <a href="https://amazon.com">Amazon</a>
         </p>
     </body>
 </html>
+
+<body>
+    <a href="https://amazon.com">Amazon</a>
+</body>
