--- a/lab05/biniaris-bio.html
+++ b/lab05/biniaris-bio.html
@@ -7,7 +7,7 @@
     <body>
         <h1> Christopher Biniaris Biography</h1>
         <p>
-            Chris Grew up in Hong Kong and has always had a very keen interst in computers and how they oprerate. He always wanted to know how something worked and how the pieces are put togother.
+            Chris Grew up in Hong kong and has always had a very keen interst in computers and how they oprerate. He always wanted to know how something worked and how the pieces are put togother.
         </p>
         <p>
             In college he majored in Communications for the first semster and transfered into the I-school very quickly after. He never thought he would be able to havea  future in this feild.
